--- a/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
@@ -165,7 +165,7 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhP-bH-6qe" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhP-bH-6qe" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="14" y="383" width="347" height="108"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="자율수강권" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqN-tk-cV2">
