--- a/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
@@ -596,7 +596,7 @@
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="16"/>
                                                     <inset key="titleEdgeInsets" minX="12" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                    <state key="normal" title="수업계획서 다운" image="docIcon">
+                                                    <state key="normal" title="수업계획서 조회" image="docIcon">
                                                         <color key="titleColor" name="greyishBrown"/>
                                                     </state>
                                                     <userDefinedRuntimeAttributes>
@@ -610,6 +610,9 @@
                                                             <color key="value" name="veryLightPink"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="showPDFFileEvent" destination="-1" eventType="touchUpInside" id="gXE-Ib-B3t"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
