--- a/woorischool/Views/Parents/ModalViews/CourseRegistrationViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/CourseRegistrationViewController.xib
@@ -54,22 +54,22 @@
                     <rect key="frame" x="0.0" y="45" width="414" height="772"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9MR-8N-VGw">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="699.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="642.5"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nNb-n8-IFG">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="57"/>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nNb-n8-IFG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="4"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="ABI-JF-OD9">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="3"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="과학 / 수요일 목요일" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UDt-gU-xPv">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="33"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
                                                     <color key="textColor" name="greyishBrown"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="과학 / 수요일 목요일" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x72-Ft-MKC">
-                                                    <rect key="frame" x="0.0" y="36" width="414" height="20"/>
+                                                    <rect key="frame" x="0.0" y="3" width="414" height="0.0"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
                                                     <color key="textColor" name="greyishBrown"/>
                                                     <nil key="highlightedColor"/>
@@ -77,7 +77,7 @@
                                             </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9dq-6y-tYW">
-                                            <rect key="frame" x="0.0" y="56" width="414" height="1"/>
+                                            <rect key="frame" x="0.0" y="3" width="414" height="1"/>
                                             <color key="backgroundColor" name="veryLightPink"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="InI-0H-UfX"/>
@@ -96,7 +96,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hil-AY-Tnb">
-                                    <rect key="frame" x="0.0" y="57" width="414" height="642.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="642.5"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SL4-0m-Obw" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                                             <rect key="frame" x="20" y="15" width="374" height="45"/>
